[project]
name = "langgraph-mcp-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.26.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-groq>=0.1.0",
    "python-dotenv>=1.0.0",
    "langgraph>=1.0.7",
]
